# valkey-audit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HOWTORELEASE.md  LICENSE  README.md  Usage.md
.github/workflows/: CI.yml  Dependabot  main.yml  publish-image.yml  release.yml  security-scan.yml
backup/: module.c  module.c.20250415  module_authlogger.c  module_ca.c  module_filterargs.c
docker/: Dockerfile.module
docs/: Usage.md
packaging/: build_package.sh  valkey-audit.conf
packaging/deb/debian/: changelog  control  copyright  rules
packaging/rpm/: valkey-audit.spec
scripts/: run_test_cli.sh  start_valkey.sh  stop_valkey.sh
scripts/docker/: Dockerfile-valkey-audit  docker-compose.yaml
src/: .clang-format  audit_metrics.c  audit_metrics.h  common.h  module.c  module.h  version.h
src/bck/: module.h  version.h
test/: CMakeLists.txt  CTestCustom.cmake  valkey.conf
test/integration/: CMakeLists.txt  requirements.txt  test_sanity.py
test/perf/: perftest.py  valkey.conf.1  valkey.conf.2  valkey.conf.3  valkey.conf.4  valkey.conf.5
test/unit/: CMakeLists.txt  auth_tests.py  dump.rdb  readme  requirements.txt  t.py  test_command_result.py  test_excluded_users.py  test_loadmodule.py  test_metrics.py  test_sanity.cpp  test_tcp.py  tt.py  unit_tests.py  unit_tests2.py
